# xcn-translate

./: .gitignore  README.md  requirements.txt  setup.cfg
rel/: xcn_translate-0.0.2-py3-none-any.whl  xcn_translate-0.0.3-py3-none-any.whl  xcn_translate-0.0.4-py3-none-any.whl
src/xcn_translate/: sys.py  webdriver.py
src/xcn_translate/Windows/: ps_util.py  regstry.py
src/xcn_translate/conf/: folder.py  ini_file.py
src/xcn_translate/date/: __init__.py  str.py
src/xcn_translate/json/: dict.py
